--- a/public/css/light.css
+++ b/public/css/light.css
@@ -10,6 +10,7 @@
   --primary-color: #2196f3;
   --error-color: #d32f2f;
   --success-color: #4caf50;
+  --success-color-dark: #45a049;
   --warning-color: #ff9800;
 }
 
